# PCAP2KML

./: .coverage  .gitignore  CHANGELOG.md  CPythonToolsPCAP2KMLpytest_tmp_map_load_fixmap_widget_test_out.txt  CPythonToolsPCAP2KMLpytest_tmp_map_load_fixout.txt  Ctemppytest_out.txt  Ctemppytest_result.txt  LICENSE  README.md  README_DE.md  bugs_requirements.txt  cam_partial_tmp.asn  pcap2kml_launcher.py  pyproject.toml  test_output2.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: BUGFIX_PCAP2KML_Codex.txt  CHANGELOG.md  ROADMAP.md  TESTPLAN_PCAP2KML_Codex.txt  aktuelle_funktionen_screenshots.md  benutzerhandbuch.html  build_exe_guide.md  eta_analysis.md  gui-redesign-mockup.html  integration_plan_v1.8.md  pcap_merge.md  prioritization_analysis.md  ui_map_layers.md
docs/benutzerhandbuch_screenshots/: README.md
docs/mockups/: design.css  workspace_map.html
docs/profiling/: SREM_with_OCIT_normal.csv  rxa_22082025_normal.csv  rxa_22082025_normal_w120s.csv  stutter_profile.md  txa_22082025_normal.csv  (+1 more)
pcap2kml_player/: README.md  __init__.py  asn1_schemas.py  color_modes.py  data_model.py  export_formats.py  i18n.py  kml_exporter.py  main.py  map_backend.py  map_widget.py  mapem_spatem_validator.py  native_map_widget.py  nmea_parser.py  parsing_worker.py  pcap_parser.py  player_controller.py  prioritization_exporter.py  protocol_constants.py  qt_runtime.py  requirements.txt  scene_model.py  security_parser.py  statistics.py  theme_manager.py  xml_map_parser.py
pytest_tmp_map_load_fix/: test_write_eta_dashboard_exporcurrent
scripts/: build_exe.ps1  generate_ui_docs.py  verify_ecdsa.py
testfiles/: Landau_2009886_V06_R1.xml  Woerth_am_Rhein_2033087_V02_R2.xml  handbook_ch3_mapem.txt  handbook_ch4_intersections.txt  handbook_ch5_spatem.txt  handbook_ch6_linking.txt  handbook_content_ch3_6.txt  handbook_raw.txt  handbook_toc.txt  pcap2kml_diagnostics.json  prioritization_issues.csv  prioritization_issues.json  prioritization_issues_machine.csv  prioritization_report.json  station_00_0d_41_ff_5b_57.kml  station_04_e5_48_10_e8_40.kml  station_04_e5_48_17_1f_21.kml  station_04_e5_48_48_48_48.kml  station_04_e5_48_73_91_2d.kml  station_1.kml  station_2228620000.kml  station_2235050749.kml  station_3858003421.kml  station_42_ee_24_0e_bc_b7.kml  station_7153.kml
tests/: conftest.py  test_app_memory.py  test_asn1_schemas.py  test_asn1_schemas_edges.py  test_data_model.py  test_e2e_full_pipeline.py  test_eta_graph_widget.py  test_export_formats.py  test_flow_resolution.py  test_gui_main_window.py  test_i18n.py  test_kml_exporter.py  test_launcher.py  test_main_entry.py  test_main_window.py  test_map_backend.py  test_map_widget.py  test_mapem_spatem_validator.py  test_native_map_widget.py  test_nmea_parser.py  test_parsing_worker.py  test_pcap_parser.py  test_pcap_parser_edge_cases.py  test_pcap_parser_extras.py  test_player_controller.py  test_prioritization_exporter.py  test_property_pcap_parser.py  test_qt_runtime.py  test_scene_model.py  test_security_parser.py  test_statistics.py  test_theme_manager.py  test_xml_map_parser.py
(+21 files in other folders)
