[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap2kml-player"
version = "1.7.0"
description = "Desktop-App zur Analyse, Wiedergabe und Kartendarstellung von V2X-Nachrichten aus PCAP-Dateien"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "PyQt6>=6.5",
    "PyQt6-WebEngine>=6.5",
    "scapy>=2.5",
    "pyshark>=0.6",
    "simplekml>=1.3",
]

[project.urls]
Homepage = "https://github.com/Nemeson/PCAP2KML"
Repository = "https://github.com/Nemeson/PCAP2KML"
Issues = "https://github.com/Nemeson/PCAP2KML/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-qt>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "freezegun>=1.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
filterwarnings = [
    "ignore::DeprecationWarning:simplekml.*",
]
markers = [
    "unit: Fast isolated unit tests (default, run always)",
    "integration: Module interactions and real file I/O",
    "gui: PyQt6 widget tests using pytest-qt",
    "e2e: End-to-end full pipeline tests (slow)",
    "property: Hypothesis property-based randomized tests",
    "slow: Tests that take >5 seconds",
    "benchmark: pytest-benchmark performance tests",
    "pcap_real: Tests requiring real capture files",
    "network: Tests requiring network access (mocked by default)",
    "qt_headless: Requires QT_QPA_PLATFORM=offscreen",
]
addopts = [
    "--strict-markers",
    "-m", "not slow and not benchmark and not e2e",
]

[tool.coverage.run]
branch = true
source = ["pcap2kml_player"]
omit = [
    "pcap2kml_player/main.py",
    "pcap2kml_player/ui/*",
    "pcap2kml_player/map_widget.py",
]

[tool.coverage.report]
precision = 1
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcap2kml_player*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
]
ignore = [
    "E501",
    "N802",
    "N803",
    "N818",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["tests/"]
